<resources>
    <string name="app_name">FollowMap</string>
    <!-- Login e Cadastro -->
    <string name="login">Login</string>
    <string name="logout">Encerrar Sessão</string>
    <string name="cadastro">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirmar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="fazer_login">Realizar login</string>
    <string name="fazer_cadastro">Registrar-se</string>
    <!-- Fragmentos: City, Address e User -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_city">City</string>
    <string name="title_address">Address</string>
    <string name="title_user">User</string>
    <!-- Fragmento User-->
    <string name="btn_usuarios">Adicionar Usuário</string>
    <string name="crud_usuario">CRUD Usuário</string>
    <!-- Fragmento City-->
    <string name="btn_city">Adicionar Cidade</string>
    <string name="crud_city">CRUD Cidade</string>
    <string name="txt_city">Cidade</string>
    <string name="txt_state">Estado</string>
    <!-- Fragmento Address-->
    <string name="btn_address">Adicionar Endereço</string>
    <string name="crud_address">CRUD Endereço</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_descricao">Descrição</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_longitude">Longitude</string>
    <!-- CRUD-->
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="voltar">Voltar</string>
</resources>