<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_city">

    <fragment
        android:id="@+id/navigation_city"
        android:name="com.example.followmap.view.City.CityFragment"
        android:label="@string/title_city"
        tools:layout="@layout/fragment_city" />

    <fragment
        android:id="@+id/navigation_address"
        android:name="com.example.followmap.view.Address.AddressFragment"
        android:label="@string/title_address"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.followmap.view.User.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>